# ppgti3102-weak-supervised-learning

./: README.md  projeto_final_review_analysis.ipynb
projeto_final/: projeto_final_analise_review_imdb.ipynb  projeto_final_review_analysis.ipynb  pyproject.toml  requirements.txt
projeto_final/datasets/: dev_test.parquet  dev_test_rotulado.parquet
projeto_final/datasets/processados/: dev.parquet  test.parquet
